<resources>
    <string name="app_name">UsandoSQLite-Pos2024</string>
    <string name="cod">Cod:</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="incluir">Incluir</string>
    <string name="excluir">Excluir</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="alterar">Alterar</string>
    <string name="listar">Listar</string>
    <string name="informe_o_c_digo">Informe o Código</string>
    <string name="informe_o_nome">Informe o Nome</string>
    <string name="informe_o_telefone">Informe o Telefone</string>
</resources>