<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Excluir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cod"
        app:layout_constraintBottom_toBottomOf="@+id/etCod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCod" />

    <EditText
        android:id="@+id/etCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="identification"
        android:ems="10"
        android:hint="@string/informe_o_c_digo"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/tvCod"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nome"
        app:layout_constraintBottom_toBottomOf="@+id/etNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etNome" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/informe_o_nome"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/tvNome"
        app:layout_constraintTop_toBottomOf="@+id/etCod" />

    <TextView
        android:id="@+id/tvTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/telefone"
        app:layout_constraintBottom_toBottomOf="@+id/etTelefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etTelefone" />

    <EditText
        android:id="@+id/etTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/informe_o_telefone"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/tvTelefone"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <Button
        android:id="@+id/btIncluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/incluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefone" />

    <Button
        android:id="@+id/btAlterar"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/alterar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btIncluir"
        android:layout_width="wrap_content"/>

    <Button
        android:id="@+id/btExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAlterar" />

    <Button
        android:id="@+id/btPesquisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/pesquisar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btExcluir" />

    <Button
        android:id="@+id/btListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/listar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPesquisar" />
</androidx.constraintlayout.widget.ConstraintLayout>